# GameLauncher---QT-CPP-App-TCP

./: README.md
GraLudo/: chinczyk_network.cpp  chinczyk_network.h  gra.cpp  gra.h  gracz.h  kostka.h
Wisielec/: CMakeLists.txt  Wisielec_Window.cpp  Wisielec_Window.h  game_config.h  game_logic.cpp  game_logic.h  kosci_config.h  kosci_logic.cpp  kosci_logic.h  kosci_network.cpp  kosci_network.h  kosci_window.cpp  kosci_window.h  launcher.cpp  launcher.h  main.cpp
WisielecKlient/: CMakeLists.txt  klient_sieciowy.cpp  klient_sieciowy.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
WisielecSerwer/: CMakeLists.txt  main.cpp  serwer_wisielec.cpp  serwer_wisielec.h
